adicionei um paragrafo

--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -9,6 +9,8 @@
     <h1>Olá, mundo </h1>
     <hr>
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Saepe vel nulla sint ex, minus eos atque, et facilis architecto hic enim totam. Perferendis deleniti voluptate sapiente maiores, impedit hic delectus.</p>
+
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium ipsa tempora ipsum. Nobis cumque atque nisi accusamus, rem exercitationem at cupiditate doloribus iste beatae aperiam sunt nemo, distinctio debitis? Vero?</p>
     
 </body>
 </html>
